Mon Dec 18 19:07:31 2000  Steve Huston  <shuston@riverace.com>

        * ace/Asynch_IO.h, ace/POSIX_Asynch_IO.h: Clarified/corrected some
          comments regarding the write() operation getting its data from
          the message block's rd_ptr.

Mon Dec 18 11:44:11 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

	* tests/MEM_Stream_Test.cpp (connect_client): Fixed an unused
	  argument warning on KCC compiler.

Mon Dec 18 11:00:14 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

	* tests/MEM_Stream_Test.cpp: Fixed problems when threads are not
	  supported and when explicit template instantiation is required.

Sun Dec 17 20:11:08 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

	* tests/MEM_Stream_Test.cpp:
	* tests/MEM_Stream_Test.dsp:
	* tests/Makefile:
	* tests/Makefile.am:
	* tests/Makefile.bor:
	* tests/run_test.lst:
	* tests/run_tests.bat:
	* tests/run_tests.lst:
	* tests/run_tests.psosim:
	* tests/tests.dsw:
	* tests/version_tests/MEM_Stream_Test.dsp:
	* tests/version_tests/version_tests.dsw: Added a new
	  MEM_Stream_Test.

Sun Dec 17 19:32:58 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/Malloc_T.cpp (shared_malloc): After a win32 structural
	  exception occurs, we need to re-execution the expression that
	  causes the exception.  Thanks to Roger Beck
	  <roger_beck@royalsun.com.au> for reporting this.

	* ace/MEM_IO.i (fetch_recv_buf, recv): Differentiate the
	  cases of end of message and errors.

	* ace/Malloc_T.h:
	* ace/Malloc_T.i: Added a base_addr method to return the base
	  address of the ACE_Malloc so we don't have to depend on MMAP's
	  base_addr method.

	* ace/MEM_SAP.i (set_buf_len,get_buf_len): Changed to computer
	  buffer location using the base_addr method in ACE_Malloc as the
	  one in Memory_Pool only indicates the fixed based addr.

	* ace/MEM_Acceptor.i:
	* ace/MEM_Acceptor.h: Added a method to set the prefix of MMAP
	  filename.

	* ace/MEM_Acceptor.cpp (ACE_MEM_Acceptor):
	* ace/MEM_Connector.cpp (ACE_MEM_Connector): Changed to MMAP